fix(bal-field, bal-hint): ensure proper alignment of field hint by ad… (#1229)
* fix(bal-field, bal-hint): ensure proper alignment of field hint by adjusting its position to the end of the label text

* chore(): format

* chore(): refactor

* chore(): fix field label margin bottom

* chore(): fix control margin on horizontal field

* chore(): update base images

* chore(): refactor

* chore(): refactor

---------

--- a/packages/components/src/components/bal-field/bal-field.sass
+++ b/packages/components/src/components/bal-field/bal-field.sass
@@ -7,8 +7,10 @@
   font-family: var(--bal-font-family-text)
 
 +block(field-label)
-  display: inline-block
-  margin-bottom: .25rem
+  display: inline
+
+.bal-field-label ~ .bal-field-control
+  margin-top: .25rem
 
 +block(field-hint)
   display: inline-block
@@ -79,5 +81,8 @@
     .bal-hint
       top: 0
 
-  .bal-field-hint ~ .bal-field-message
+  .bal-field-hint ~ .bal-field-message 
     margin-left: calc(var(--bal-field-label-horizontal-width) + (var(--bal-field-label-column-gap) * 2) + 1.125rem)
+
+  .bal-field-label ~ .bal-field-control
+    margin-top: 0
